add discard logic